# PrinterXPL-Forge

./: .gitattributes  .gitignore  ARCHITECTURE_DIAGRAM_v2.4.2.md  ARCHITECTURE_VISUAL.txt  BUG_FIX_REPORT.md  CHANGELOG.md  CODE_AUDIT_REPORT_v2.3.3.md  COMPREHENSIVE_QA_FINAL_REPORT.md  DEPENDENCIES_AUDIT_REPORT.md  FINAL_SESSION_REPORT.md  FINAL_STATUS_v2.4.2.md  GITHUB_DESCRIPTION.md  HELP_METHODS_SUMMARY.md  IMPLEMENTACAO_v2.3.3_RESUMO.md  LICENSE  MANIFEST.in  PJL_ATTACKS_COMPLETE_LIST.md  PJL_COMMANDS_ANALYSIS_v2.0.md  QA_REPORT_v2.4.0.md  README.md  README.pt-BR.md  RELEASE_NOTES_v2.3.4.md  RELEASE_NOTES_v2.3.5.md  RELEASE_NOTES_v2.4.0.md  SESSION_FINAL_SUMMARY.md  V2.4.0_COMPLETE_SUMMARY.md  WIKI_UPLOAD_INSTRUCTIONS.md  cli.py  config.json.example  config.yaml.example  help_methods_remaining.txt  install.sh  printer-reaper.py  printerxpl-forge.py  pxf.py  pyproject.toml  requirements.txt  run.ps1  run.sh  sample_targets.txt  (+7 more)
.github/workflows/: publish-pypi.yml
.log/: epson_l3250_assessment_report.md  handoff.md
PrinterReaper.egg-info/: PKG-INFO
debian/: changelog  control  copyright  printer-reaper.install  printer-reaper.manpages  rules
deleted/: CHANGE_SUMMARY_v2.3.3.md  CODE_ANALYSIS_v2.3.3.md  COMMIT_MESSAGE_v2.3.3.txt  DEVELOPMENT_ROADMAP.md  DISCLAIMER.md  FINAL_DEPLOYMENT_SUMMARY_v2.3.5.md  PHASE2_TESTING_PLAN.md  PRET_VS_PRINTERREAPER_ANALYSIS.md  QA_TEST_REPORT.md  QA_TEST_RESULTS_FIXED.md  README.md  RELEASE_NOTES_v2.3.1.md  RELEASE_NOTES_v2.3.3.md  RELEASE_SUMMARY_v2.3.0.md  SESSION_COMPLETE_SUMMARY.md  V2.3.1_COMPLETE_SUMMARY.md  V2.3.5_COMMIT_SUMMARY.md  pjl_old.py  printer_backup.py  printer_reorganized.py  test_fixes.py  test_infinite_loop_fix.py  test_loop_fix.py  test_qa_commands.txt  test_real_world_phase2.txt  test_v2.3.1_commands.txt
deleted/core/: helpinformation.txt
deleted/old-files-backup/: PJL_V2_REORGANIZATION.md  RELEASE_NOTES.md  passwd  requirements.txt  simple_test.txt
deleted/utils/: printers_list.csv
diagrams/: CHANGELOG.md  architecture_ascii_visual.mmd  architecture_layered.mmd  attack_matrix.drawio  command_flow.mmd  credential_flow.drawio  engines.mmd  mermaid-config.json  overview_for_dummies.mmd  printerreaper_workflow.drawio  printerxpl_forge_workflow.drawio  protocol_stack.mmd  security_testing_flow.mmd
diagrams/scripts/: make-diagrams.ps1
docs/: Destructive-Attacks-Wiki.md  Exploiting-Network-Printers-via-PrinterXPL-Forge.md  Exploiting-Network-Printers-via-PrinterXPL-Forge.pptx
man/man1/: printerxpl-forge.1
nse/: README.md  __init__.py  install_nse.py
nse/lib/: printerxpl.lua
nse/scripts/: cups-info.nse  cups-queue-info.nse  hp-printers-cve-2022-1026.nse  http-device-mac.nse  http-hp-ilo-info.nse  http-info-xerox-enum.nse  http-vuln-cve2022-1026.nse  lexmark-config.nse  pjl-ready-message.nse  printer-banner.nse  printer-cups-rce.nse  printer-cve-detect.nse  printer-discover.nse  printer-firmware-exposed.nse  printer-hp-pjl.nse  printer-http-ews.nse  printer-ipp-info.nse  printer-lexmark-ipp.nse  printer-passback.nse  printer-pjl-info.nse  printer-printnightmare.nse  printer-snmp-info.nse  printer-vuln-check.nse  snmp-device-mac.nse  snmp-info.nse  snmp-sysdescr.nse
old-sources/: README.md
old-sources/payloads/: banner.ps  exfil_fake.ps
old-sources/pret/: core.py
old-sources/tools/: autodetect.py  nmap_launcher.py  reaper_report.py  scan_subnet.py
overlays/: README
packaging/: BUILD.md
packaging/rpm/: printer-reaper.spec
payloads/: erase.ps  loop.ps  storm.ps
pret/: __init__.py  payloads.py
pret/modules/: pjl.py
results/: analysis_report.md  network_summary.md  nmap_scan_20250415_142129.nmap  nmap_scan_20250415_142129.xml  nmap_scan_20250415_142148.nmap  nmap_scan_20250415_142148.xml  nmap_scan_20250415_142157.nmap  nmap_scan_20250415_142157.xml  nmap_scan_20250415_142428.nmap  nmap_scan_20250415_142428.xml  nmap_scan_20250415_142805_192_168_18_108_24.nmap  nmap_scan_20250415_142805_192_168_18_108_24.xml  printerreaper_scan_20250415_130149.csv  printerreaper_scan_20250415_130149.json  printerreaper_scan_20250415_130210.csv  printerreaper_scan_20250415_130210.json  printerreaper_scan_20250415_132703.csv  printerreaper_scan_20250415_132703.json
scripts/: help_selftest.py  make-diagrams.ps1  make-diagrams.sh  selftest_help_run.py
src/: discovery.py  helper.py  main.py  pret.py  version.py
src/core/: attack_orchestrator.py  capabilities.py  connection_manager.py  console.py  destructive_audit.py  discovery.py  error_handler.py  http_connector.py  language_detector.py  logger.py  osdetect.py  poly_runner.py  printer.py  printer_detector.py  retry_manager.py
src/data/: cve_catalog.json  exploit_triage.json  xpl_manifest.json
src/modules/: cve.py  install_printer.py  login_bruteforce.py  pcl.py  pjl.py  pjl_v2.py  postscript.py  print_job.py  ps.py
src/osint/: lookup.py
src/payloads/: README.md  __init__.py  banner.ps  erase.ps  exfil.ps  loop.ps  storm.ps
src/protocols/: __init__.py  firmware.py  ipp.py  ipp_attacks.py  lpd.py  lpd_fuzz.py  raw.py  (+4 more)
testpages/: README
tests/: qa_comprehensive_test.py  qa_test_v2.4.0.txt  test_runner.py
tools/: _add_author.py  analyze_out.py  db_merge.py  env_doctor.py  export_md_summary.py  generate_poc_pdf.py  mass_payload.py  nmap_launcher.py  release_notes.py  scan_subnet_full.py  venv_bootstrap.py
wiki/: Architecture.md  Attack-Matrix.md  Attack-Vectors.md  Auto-Exploit.md  Brute-Force.md  CVE-Catalog.md  Commands-Reference.md  Configuration.md  Contributing.md  Cross-Site-Printing.md  Discovery.md  Examples.md  Exploit-Library.md  FAQ.md  Home.md  Installation.md  Interactive-Shell.md  Lateral-Movement.md  Online-Discovery-Dorks.md  PJL-Commands.md  Quick-Start.md  Reconnaissance.md  Security-Testing.md  Send-Job.md  Storage-Firmware.md  Supported-Vendors.md  Troubleshooting.md  WIKI_README.md  Wordlists.md  _Sidebar.md
wiki-html/: README.md  commands.html  index.html
wordlists/: README.txt  default_creds.txt  ftp_creds.txt  pjl_passwords.txt  printer_default_creds.txt  printer_models.txt  snmp_communities.txt
xpl/: index.json
(+297 files in other folders)
