[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata
# ──────────────────────────────────────────────────────────────────────────────
[project]
name = "printer-reaper"
version = "3.7.0"
description = "Advanced Printer Penetration Testing Toolkit — PJL, PostScript, PCL, CVE scanner, brute-force, pivot"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Andre Henrique", email = "mrhenrike@users.noreply.github.com" }
]
keywords = [
    "printer", "penetration-testing", "pjl", "postscript", "pcl",
    "security", "exploitation", "iot", "hacking", "printer-security",
    "snmp", "ipp", "pret", "network-printer"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

# ── Core dependencies (always installed) ─────────────────────────────────────
dependencies = [
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "colorama>=0.4.6",
    "pysnmp-lextudio>=5.0.31",
    "pyasn1>=0.4.8,<0.6",
    "PyYAML>=6.0",
]

# ── Optional dependency groups ────────────────────────────────────────────────
[project.optional-dependencies]
smb = [
    "pysmb>=1.2.9",
    "impacket>=0.12.0",
]
osint = [
    "shodan>=1.28.0",
    "censys>=2.2.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.1.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
# Install everything at once:  pip install printer-reaper[full]
full = [
    "pysmb>=1.2.9",
    "impacket>=0.12.0",
    "shodan>=1.28.0",
    "censys>=2.2.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
]

# ── Entry points ──────────────────────────────────────────────────────────────
[project.scripts]
printer-reaper = "main:main"
printerreaper  = "main:main"

# ── Project links ─────────────────────────────────────────────────────────────
[project.urls]
Homepage       = "https://www.uniaogeek.com.br/printer-reaper"
Repository     = "https://github.com/mrhenrike/PrinterReaper"
Issues         = "https://github.com/mrhenrike/PrinterReaper/issues"
Wiki           = "https://github.com/mrhenrike/PrinterReaper/wiki"
Changelog      = "https://github.com/mrhenrike/PrinterReaper/releases"

# ──────────────────────────────────────────────────────────────────────────────
# Setuptools configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Include non-Python data files shipped with the package
[tool.setuptools.package-data]
"*" = [
    "assets/fonts/*.pfa",
    "assets/mibs/*",
    "assets/overlays/*.eps",
]

# ──────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
